--- a/projects.html
+++ b/projects.html
@@ -187,7 +187,7 @@
     </div>
 </div>
 <!-- Page Header End -->
-<!-- Our Project Start -->
+  <!-- Our Project Start -->
   <div class="our-project">
     <div class="container">
 
@@ -220,7 +220,7 @@
         <div class="col-lg-12">
           <!-- Project Item Boxes start -->
           <div class="row project-item-boxes align-items-center">
-            <div class="col-md-6 project-item-box architecture bedroom">
+            <div class="col-md-6 project-item-box architecture interior bedroom">
               <!-- Project Item Start -->
               <div class="project-item wow fadeInUp">
                 <div class="project-image">
@@ -249,7 +249,7 @@
               <!-- Project Item End -->
             </div>
 
-            <div class="col-md-6 project-item-box interior kitchen">
+            <div class="col-md-6 project-item-box architecture">
               <!-- Project Item Start -->
               <div class="project-item wow fadeInUp" data-wow-delay="0.2s">
                 <div class="project-image">
@@ -277,8 +277,36 @@
               </div>
               <!-- Project Item End -->
             </div>
+            <div class="col-md-6 project-item-box kitchen furniture interior">
+              <!-- Project Item Start -->
+              <div class="project-item wow fadeInUp" data-wow-delay="0.2s">
+                <div class="project-image">
+                  <div class="project-featured-image">
+                    <figure class="image-anime">
+                      <img src="/images/interior/IMG_1439.JPG" alt="" />
+                    </figure>
+                  </div>
 
-            <div class="col-md-6 project-item-box furniture architecture">
+                  <div class="project-btn">
+                    <a href="projects.html"
+                      ><img src="images/arrow-white.svg" alt=""
+                    /></a>
+                  </div>
+                </div>
+
+                <div class="project-content">
+                  <h3>luxury homes</h3>
+                  <h2>
+                    <a href="projects.html"
+                      >Crafting Dream Homes That Redefine Luxury Living</a
+                    >
+                  </h2>
+                </div>
+              </div>
+              <!-- Project Item End -->
+            </div>
+
+            <div class="col-md-6 project-item-box architecture">
               <!-- Project Item Start -->
               <div class="project-item wow fadeInUp" data-wow-delay="0.4s">
                 <div class="project-image">
@@ -307,7 +335,7 @@
               <!-- Project Item End -->
             </div>
 
-            <div class="col-md-6 project-item-box bedroom">
+            <div class="col-md-6 project-item-box interior bedroom">
               <!-- Project Item Start -->
               <div class="project-item wow fadeInUp" data-wow-delay="0.6s">
                 <div class="project-image">
