--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             <!-- Slider Image Start -->
             <div class="hero-slider-image">
               <img
-                src="https://lh3.googleusercontent.com/p/AF1QipPrl7O31QqGUbJdwCRTas2N53KE3s8e8UdNuCGb=s1360-w1360-h1020-rw"
+                src="/images/interior/IMG_1295.JPG"
                 alt="Modern Interior Designers in Kerala"
               />
             </div>
@@ -302,7 +302,7 @@
             <!-- Slider Image Start -->
             <div class="hero-slider-image">
               <img
-                src="https://lh3.googleusercontent.com/p/AF1QipOGoPIfGI1184ny_RY0pey8JPlrfALO0RinQHXn=s1360-w1360-h1020-rw"
+                src="/images/interior/IMG_1377.JPG"
                 alt="Beautiful Interior Designers in kerala"
               />
             </div>
@@ -316,7 +316,7 @@
             <!-- Slider Image Start -->
             <div class="hero-slider-image">
               <img
-                src="https://lh3.googleusercontent.com/p/AF1QipOa_5xetwC365NTfZRBhx9td9voHuMprjbQwRtM=s1360-w1360-h1020-rw"
+                src="/images/interior/bnu.jpg"
                 alt="Best Interior Decorators in Kerala"
               />
             </div>
@@ -330,7 +330,7 @@
             <!-- Slider Image Start -->
             <div class="hero-slider-image">
               <img
-                src="https://lh3.googleusercontent.com/p/AF1QipOFjfiOdedkapp5Mzq4yWIMtsbA9ZLjeQRZ-OzI=s1360-w1360-h1020-rw"
+                src="/images/interior/IMG_1351.JPG"
                 alt="Best Interior Decorators in Kerala"
               />
             </div>
@@ -366,7 +366,7 @@
 
               <!-- Feedback Counter Start -->
               <div class="experience-counter">
-                <h3><span class="counter">15</span>+</h3>
+                <h3><span class="counter">9</span>+</h3>
                 <p>Years of experience</p>
               </div>
               <!-- Feedback Counter End -->
