--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                 data-cursor-text="Play"
               >
                 <figure class="image-anime">
-                  <img src="https://lh3.googleusercontent.com/p/AF1QipNLnRiy-SS5tQwuWqIw4kaVDVefzR6XWxWyVuK3=s1360-w1360-h1020-rw" alt="" />
+                  <img src="/images/interior/IMG_1165.JPG" alt="" />
                 </figure>
               </a>
             </div>
