--- a/about.html
+++ b/about.html
@@ -236,10 +236,10 @@
 
 
                         
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">
+                        <p class="wow fadeInUp text-p" data-wow-delay="0.2s">
                            Coax Architecture Studio is a design-driven firm dedicated to creating thoughtful, sustainable, and innovative architectural solutions. We specialize in crafting spaces that seamlessly blend functionality, aesthetics, and environmental responsibility, tailored to each client's unique vision.
                         </p>
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">
+                        <p class="wow fadeInUp text-p" data-wow-delay="0.2s">
                             We take pride in delivering timeless and innovative designs that reflect our clients' personalities
                             and aspirations. Every project we undertake is tailored to meet specific needs, budgets, and quality
                             expectations while maintaining a balance between style and practicality. Our commitment to perfection
@@ -372,7 +372,7 @@
                         </div>
                         <div class="vision-mission-content">
                             <h3>our vision</h3>
-                            <p>Our vision is rooted in the belief that thoughtfully designed spaces can transform lives, enhancing how people feel, work, and connect. We are committed to creating interiors that reflect our clients' unique identities, blending comfort, functionality, and beauty. By combining timeless design with modern innovations, we craft spaces that are visually stunning and practical.</p>
+                            <p class="text-p">Our vision is rooted in the belief that thoughtfully designed spaces can transform lives, enhancing how people feel, work, and connect. We are committed to creating interiors that reflect our clients' unique identities, blending comfort, functionality, and beauty. By combining timeless design with modern innovations, we craft spaces that are visually stunning and practical.</p>
                         </div>
                     </div>
                     <!-- Vision Mission Item End -->
@@ -383,7 +383,7 @@
                         </div>
                         <div class="vision-mission-content">
                             <h3>our mission</h3>
-                            <p>Our mission is to deliver exceptional interior designs that enhance the quality of life by prioritizing comfort, functionality, and aesthetics. We aim to create space that are not only visually appealing but also tailored to meet the specific needs and desires of our client By staying true to design innovation, we ensure that every project reflects the perfect balance between style and purpose.</p>
+                            <p class="text-p">Our mission is to deliver exceptional interior designs that enhance the quality of life by prioritizing comfort, functionality, and aesthetics. We aim to create space that are not only visually appealing but also tailored to meet the specific needs and desires of our client By staying true to design innovation, we ensure that every project reflects the perfect balance between style and purpose.</p>
                         </div>
                     </div>
                     <!-- Vision Mission Item End -->
@@ -915,7 +915,7 @@
                 </div>
               </div>
               <!-- Footer Header End -->
-              <p style="color: #ffffff">
+               <p style="color: #ffffff" class="text-p">
                 Coax Architecture Studio is a design-driven firm dedicated to creating thoughtful, sustainable, and innovative architectural solutions. We specialize in crafting spaces that seamlessly blend functionality, aesthetics, and environmental responsibility, tailored to each client's unique vision.
               </p>
               <div class="d-flex pt-2" style="gap: 6px">
