--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                 >
               </h1>
 
-              <p class="wow fadeInUp" data-wow-delay="0.2s">
+              <p class="wow fadeInUp" data-wow-delay="0.2s" style="text-align: justify;">
                 Coax group strives on providing reliable, service-oriented
                 design solutions, where responsible and practical design
                 alternatives master all the other concerns. We aim in building a
@@ -506,7 +506,7 @@
         <div class="col-lg-6">
           <!-- Section Title Content Start -->
           <div class="section-title-content">
-            <p class="wow fadeInUp" data-wow-delay="0.2s">
+            <p class="wow fadeInUp" data-wow-delay="0.2s" style="text-align: justify;">
               As a leading interior design studio - best interior designer in
               Kerala, we offer a full range of services tailored to your needs.
               From bedroom interior design and commercial interiors to office
@@ -903,7 +903,7 @@
         <div class="col-lg-6">
           <!-- Section Title Content Start -->
           <div class="section-title-content dark-section">
-            <p class="wow fadeInUp" data-wow-delay="0.2s">
+            <p class="wow fadeInUp" data-wow-delay="0.2s" style="text-align: justify;">
               At Coax Architecture Studio, we follow a comprehensive approach to bring
               your vision to life. Whether it's home interior design or office
               interior design, our process includes concept development,
@@ -927,7 +927,7 @@
               </div>
               <div class="how-we-work-content">
                 <h3>01. initial consultation</h3>
-                <p>
+                <p class="text-p">
                   We start with a one-on meeting to understand your vision
                   preferences and requirement.
                 </p>
@@ -941,7 +941,7 @@
               </div>
               <div class="how-we-work-content">
                 <h3>02. design planning</h3>
-                <p>
+                <p class="text-p">
                   This involves selecting materials, and layouts, furnishings,
                   as well as creating 3D renderings.
                 </p>
@@ -955,7 +955,7 @@
               </div>
               <div class="how-we-work-content">
                 <h3>03. project execution</h3>
-                <p>
+                <p class="text-p">
                   With the design plans in this place, we manage and coordinate
                   all aspects of the projects.
                 </p>
@@ -969,7 +969,7 @@
               </div>
               <div class="how-we-work-content">
                 <h3>04. final review</h3>
-                <p>
+                <p class="text-p">
                   After completing project we conduct a thorough walkthrough
                   with you to review the space.
                 </p>
@@ -1039,8 +1039,8 @@
       <div class="row align-items-center">
         <div class="col-lg-6">
           <!-- Our Skill Content Start -->
-          <div class="our-skill-content">
-            <!-- Section Title Start -->
+<div class="our-skill-content">
+                      <!-- Section Title Start -->
             <div class="section-title">
               <p
                 class="text-anime-style-2 description mt-0"
@@ -1048,9 +1048,9 @@
               >
                 Award winning design team to build your<span> dream home</span>
               </p>
-              <p class="wow fadeInUp" data-wow-delay="0.2s">
+              <p class="wow fadeInUp text-p" data-wow-delay="0.2s">
                 Golden Door Award for Excellent Consultancy in Architecture &
-                Interior Design – South India 2024 The Golden Door Award for
+                Interior Design South India 2024 The Golden Door Award for
                 2024 honors outstanding excellence in architectural and interior
                 design consultancy across South India. <br> This prestigious
                 recognition is awarded to firms and professionals who have
@@ -1417,7 +1417,7 @@
                 </div>
               </div>
               <!-- Footer Header End -->
-              <p style="color: #ffffff">
+               <p style="color: #ffffff" class="text-p">
                 Coax Architecture Studio is a design-driven firm dedicated to creating thoughtful, sustainable, and innovative architectural solutions. We specialize in crafting spaces that seamlessly blend functionality, aesthetics, and environmental responsibility, tailored to each client's unique vision.
               </p>
               <div class="d-flex pt-2" style="gap: 6px">
