--- a/projects.html
+++ b/projects.html
@@ -398,7 +398,7 @@
                 </div>
               </div>
               <!-- Footer Header End -->
-              <p style="color: #ffffff">
+               <p style="color: #ffffff" class="text-p">
                 Coax Architecture Studio is a design-driven firm dedicated to creating thoughtful, sustainable, and innovative architectural solutions. We specialize in crafting spaces that seamlessly blend functionality, aesthetics, and environmental responsibility, tailored to each client's unique vision.
               </p>
               <div class="d-flex pt-2" style="gap: 6px">
