--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                 community where design quality and sustainable alternatives are
                 never compromised. Quality and credibility are our core values
                 and we work harmoniously with the expectation of the clients,
-                thereby assuring satisfaction. Each project we embark on is
+                thereby assuring satisfaction. <br> Each project we embark on is
                 unique, and involves diversity in its user types, magnitude, and
                 geography, as our proficiency extends all over India, South
                 Africa, and UAE. We aim in continuing our expedition as we
