--- a/about.html
+++ b/about.html
@@ -208,20 +208,8 @@
                             <img src="https://lh3.googleusercontent.com/p/AF1QipOmVxJuag_i2vxrj8gAa0dlM9mSr6nmsKFST7eB=s1360-w1360-h1020-rw" alt="">
                         </figure>
 
-                        <!-- Feedback Counter Start -->
-                        <div class="experience-counter">
-                            <h3><span class="counter">3</span>+</h3>
-                            <p>Years of experience</p>
-                        </div>
-                        <!-- Feedback Counter End -->
                     </div>
                     <!-- About Image 2 End -->
-                    <!-- Feedback Counter Start -->
-                    <div class="feedback-counter">
-                        <p><span class="counter">95</span>%</p>
-                        <h3>positive feedback</h3>
-                    </div>
-                    <!-- Feedback Counter End -->
                 </div>
                 <!-- About Us Images End -->
             </div>
@@ -968,7 +956,7 @@
         <div class="col-lg-2 col-md-6 mt-5 pt-5">
           <!-- Footer Links Start -->
           <div class="footer-links">
-            <h3>Projects</h3>
+            <h3>Services</h3>
             <ul>
               <li><a href="projects.html">Architecture design and construction</a></li>
               <li>
