--- a/services.html
+++ b/services.html
@@ -424,55 +424,7 @@
                         <p class="wow fadeInUp" data-wow-delay="0.2s">Our dedicated team of designers works closely with you to understand your vision and bring it to life with thoughtful attention to detail.</p>
                     </div>
                     <!-- Section Title End -->
-                    <!-- About SkillBar Start -->
-                    <div class="our-skillbar">
-                        <!-- Skills Progress Bar Start -->
-                        <div class="skills-progress-bar">
-                            <!-- Skill Item Start -->
-                            <div class="skillbar" data-percent="95%">
-                                <div class="skill-data">
-                                    <div class="skill-title">space planning and layout</div>
-                                    <div class="skill-no">95%</div>
-                                </div>
-                                <div class="skill-progress">
-                                    <div class="count-bar"></div>
-                                </div>
-                            </div>
-                            <!-- Skill Item End -->
-                        </div>
-                        <!-- Skills Progress Bar End -->
-                        <!-- Skills Progress Bar Start -->
-                        <div class="skills-progress-bar">
-                            <!-- Skill Item Start -->
-                            <div class="skillbar" data-percent="85%">
-                                <div class="skill-data">
-                                    <div class="skill-title">project challenges and solutions</div>
-                                    <div class="skill-no">85%</div>
-                                </div>
-                                <div class="skill-progress">
-                                    <div class="count-bar"></div>
-                                </div>
-                            </div>
-                            <!-- Skill Item End -->
-                        </div>
-                        <!-- Skills Progress Bar End -->
-                        <!-- Skills Progress Bar Start -->
-                        <div class="skills-progress-bar">
-                            <!-- Skill Item Start -->
-                            <div class="skillbar" data-percent="75%">
-                                <div class="skill-data">
-                                    <div class="skill-title">sustainability and eco-friendly features</div>
-                                    <div class="skill-no">75%</div>
-                                </div>
-                                <div class="skill-progress">
-                                    <div class="count-bar"></div>
-                                </div>
-                            </div>
-                            <!-- Skill Item End -->
-                        </div>
-                        <!-- Skills Progress Bar End -->
-                    </div>
-                    <!-- About SkillBar End -->
+                    
                 </div>
                 <!-- Our Skill Content End -->
             </div>
@@ -586,7 +538,7 @@
         <div class="col-lg-2 col-md-6 mt-5 pt-5">
           <!-- Footer Links Start -->
           <div class="footer-links">
-            <h3>Projects</h3>
+            <h3>Services</h3>
             <ul>
               <li><a href="projects.html">Architecture design and construction</a></li>
               <li>
