--- a/contact.html
+++ b/contact.html
@@ -401,7 +401,7 @@
         <div class="col-lg-2 col-md-6 mt-5 pt-5">
           <!-- Footer Links Start -->
           <div class="footer-links">
-            <h3>Projects</h3>
+            <h3>Services</h3>
             <ul>
               <li><a href="projects.html">Architecture design and construction</a></li>
               <li>
