--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 
     <style>
         :root {
-            --accent-color: #006a63
+            --accent-color: rgb(41, 41, 41)
 ;
         }
         .breadcrumb-item + .breadcrumb-item::before {
