--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
     <style>
       :root {
-        --accent-color: #006a63;
+        --accent-color: rgb(41, 41, 41);
       }
       .breadcrumb-item + .breadcrumb-item::before {
         content: var(--bs-breadcrumb-divider, "->") !important;
