--- a/projects.html
+++ b/projects.html
@@ -48,7 +48,7 @@
 
     <style>
         :root {
-            --accent-color: #006a63
+            --accent-color: rgb(41, 41, 41)
 ;
         }
         .breadcrumb-item + .breadcrumb-item::before {
