--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
       }
 
       .navbar-brand {
-        height: 95px;
-        width: 150px;
-        position: absolute;
+         margin-top: 30px;
+            width: 70px;
+            position: absolute;
       }
 
       .slicknav_btn {
@@ -180,9 +180,9 @@
 
       @media (max-width: 768px) {
         .navbar-brand {
-          height: 60px;
-          width: 100px;
-          position: absolute;
+           margin-top: 30px;
+            width: 70px;
+            position: absolute;
         }
       }
 
@@ -766,10 +766,66 @@
                 </div>
 
                 <div class="project-content">
-                  <h3>luxury homes</h3>
+                  <h3>Architecture</h3>
                   <h2>
                     <a href="projects.html"
-                      >Crafting Dream Homes That Redefine Luxury Living</a
+                      >Residence for Mr Jithin</a
+                    >
+                  </h2>
+                </div>
+              </div>
+              <!-- Project Item End -->
+            </div>
+            <div class="col-md-6 project-item-box architecture">
+              <!-- Project Item Start -->
+              <div class="project-item wow fadeInUp" data-wow-delay="0.2s">
+                <div class="project-image">
+                  <div class="project-featured-image">
+                    <figure class="image-anime">
+                      <img src="/images/interior/bnu.jpg" alt="" />
+                    </figure>
+                  </div>
+
+                  <div class="project-btn">
+                    <a href="projects.html"
+                      ><img src="images/arrow-white.svg" alt=""
+                    /></a>
+                  </div>
+                </div>
+
+                <div class="project-content">
+                  <h3>Architecture</h3>
+                  <h2>
+                    <a href="projects.html"
+                      >Residence for Mr Binu</a
+                    >
+                  </h2>
+                </div>
+              </div>
+              <!-- Project Item End -->
+            </div>
+            <div class="col-md-6 project-item-box architecture">
+              <!-- Project Item Start -->
+              <div class="project-item wow fadeInUp" data-wow-delay="0.2s">
+                <div class="project-image">
+                  <div class="project-featured-image">
+                    <figure class="image-anime">
+                      <img src="/images/interior/my.jpg" alt="" />
+                    </figure>
+                  </div>
+
+                  <div class="project-btn">
+                    <a href="projects.html"
+                      ><img src="images/arrow-white.svg" alt=""
+                    /></a>
+                  </div>
+                </div>
+
+                <div class="project-content">
+                  <h3>Architecture</h3>
+                  <h2>
+                    <a href="projects.html"
+                      >Residence for Mr Vijayakumar</a
                     >
                   </h2>
                 </div>
