--- a/services.html
+++ b/services.html
@@ -61,7 +61,7 @@
 
         .navbar-brand {
             height: 95px;
-            width: 150px;
+            width: 70px;
             position: absolute;
         }
 
@@ -71,9 +71,9 @@
 
         @media (max-width: 768px) {
            .navbar-brand {
-                height: 60px;
-                width: 100px;
-                position: absolute;
+                 margin-top: 30px;
+            width: 70px;
+            position: absolute;
             } 
         }
 
