--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="En-In">
   <head>
     <!-- Favicon Icon -->
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="/images/16 x 16.png" />
     <!-- Google Fonts Css-->
     <link rel="preconnect" href="https://fonts.googleapis.com/" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
@@ -169,7 +169,6 @@
       }
 
       .navbar-brand {
-         margin-top: 30px;
             width: 70px;
             position: absolute;
       }
@@ -238,7 +237,7 @@
         <div class="navbar navbar-expand-lg">
           <!-- Logo Start -->
           <a class="navbar-brand" href="index.html">
-            <img src="/images/logo.png" alt="Logo" />
+            <img src="/images/300 x 300.png" alt="Logo" />
           </a>
           <!-- Logo End -->
           <!-- Main Menu Start -->
@@ -1452,7 +1451,7 @@
                     <!-- Footer Logo Start -->
                     <div class="footer-logo mt-5">
                       <img
-                        src="/images/logo.png"
+                        src="/images/300 x 300 a.png"
                         alt="Logo"
                         style="width: 150px"
                       />
