--- a/index.html
+++ b/index.html
@@ -377,12 +377,10 @@
               <h2 class="wow fadeInUp title">About us</h2>
               <h1
                 class="text-anime-style-2 description mt-0"
-                data-cursor="-opaque"
+                data-cursor="-opaque" style="text-align: justify;"
               >
                 <span class="txth">Coax Architecture Studio </span>: The most trusted Architecture &
-                Interior designer in Kerala-<span
-                  >Transforming Spaces with Excellence</span
-                >
+                Interior designer in Kerala
               </h1>
 
               <p class="wow fadeInUp" data-wow-delay="0.2s" style="text-align: justify;">
