--- a/projects.html
+++ b/projects.html
@@ -71,7 +71,7 @@
 
         @media (max-width: 768px) {
            .navbar-brand {
-                
+               margin-top: 30px;
             width: 70px;
             position: absolute;
             } 
@@ -170,6 +170,30 @@
 <div class="page-header parallaxie">
     <div class="container">
         <div class="row">
+            <div class="col-lg-12">
+                <!-- Page Header Box Start -->
+                <div class="page-header-box">
+                    <h1 class="text-anime-style-2" data-cursor="-opaque">Our Projects</h1>
+                    <nav class="wow fadeInUp">
+                        <ol class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="index.html">home</a></li>
+                            <li class="breadcrumb-item active" aria-current="page">projects</li>
+                        </ol>
+                    </nav>
+                </div>
+                <!-- Page Header Box End -->
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Page Header End -->
+
+         <!-- Our Project Start -->
+  <div class="our-project">
+    <div class="container">
+    
+
+      <div class="row">
         <div class="col-lg-12">
           <!-- Our Project Nav start -->
           <div class="our-Project-nav wow fadeInUp" data-wow-delay="0.4s">
@@ -422,7 +446,7 @@
                     <!-- Footer Logo Start -->
                     <div class="footer-logo mt-5">
                       <img
-                        src="/images/300 x 300 a.png"
+                        src="/images/logo.png"
                         alt="Logo"
                         style="width: 150px"
                       />
