--- a/index.html
+++ b/index.html
@@ -1093,14 +1093,7 @@
                 Golden Door Award for Excellent Consultancy in Architecture &
                 Interior Design South India 2024 The Golden Door Award for
                 2024 honors outstanding excellence in architectural and interior
-                design consultancy across South India. <br> This prestigious
-                recognition is awarded to firms and professionals who have
-                demonstrated visionary creativity, sustainable practices, and
-                exceptional client satisfaction in the built environment.
-                Celebrating innovation, aesthetic mastery, and strategic
-                consultancy, the award spotlights those who have not only
-                transformed spaces but also elevated industry standards through
-                their dedication, expertise, and impactful design solutions. <br>
+                design consultancy across South India. <br>
                 Our dedicated team of designers works closely with you to
                 understand your vision and bring it to life with thoughtful
                 attention to detail.
