--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
               <h2 class="wow fadeInUp title">About us</h2>
               <h1
                 class="text-anime-style-2 description mt-0"
-                data-cursor="-opaque" style="text-align: justify;"
+                data-cursor="-opaque"
               >
                 <span class="txth">Coax Architecture Studio </span>: The most trusted Architecture &
                 Interior designer in Kerala
