--- a/about.html
+++ b/about.html
@@ -335,7 +335,7 @@
                 <!-- Section Title Start -->
                 <div class="section-title dark-section">
                     <h3 class="wow fadeInUp">vision mission</h3>
-                    <h2 class="text-anime-style-2" data-cursor="-opaque">A behind the scenes look at <span>our agency</span></h2>
+                    <h2 class="text-anime-style-2" data-cursor="-opaque">A behind the scenes look at <span style="color: rgb(139, 139, 139);">our agency</span></h2>
                 </div>
                 <!-- Section Title End -->
             </div>
