--- a/projects.html
+++ b/projects.html
@@ -445,8 +445,8 @@
                   <div class="col-md-6">
                     <!-- Footer Logo Start -->
                     <div class="footer-logo mt-5">
-                      <img
-                        src="/images/logo.png"
+                       <img
+                        src="/images/300 x 300 a.png"
                         alt="Logo"
                         style="width: 150px"
                       />
