--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
             <!-- Intro Image Start -->
             <div class="intro-video-image">
               <a
-                href="https://www.youtube.com/watch?v=Y-x0efG1seA"
+                href="https://www.youtube.com/watch?v=Uggfh4T2qsU"
                 class="popup-video"
                 data-cursor-text="Play"
               >
@@ -640,7 +640,7 @@
             <!-- Video Play Button Start -->
             <div class="video-play-button">
               <a
-                href="https://www.youtube.com/watch?v=Y-x0efG1seA"
+                href="https://www.youtube.com/watch?v=Uggfh4T2qsU"
                 class="popup-video"
                 data-cursor-text="Play"
                 >play</a
@@ -1463,7 +1463,7 @@
                 <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/coaxarchitects/"
                   ><i class="fab fa-facebook-f"></i
                 ></a>
-                <a class="btn btn-outline-light btn-social" href="index.html"
+                <a class="btn btn-outline-light btn-social" href="https://www.youtube.com/@coaxgroup1125"
                   ><i class="fab fa-youtube"></i
                 ></a>
                 <a
