--- a/projects.html
+++ b/projects.html
@@ -468,7 +468,7 @@
                 <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/coaxarchitects/"
                   ><i class="fab fa-facebook-f"></i
                 ></a>
-                <a class="btn btn-outline-light btn-social" href="index.html"
+                <a class="btn btn-outline-light btn-social" href="https://www.youtube.com/@coaxgroup1125"
                   ><i class="fab fa-youtube"></i
                 ></a>
                 <a
