--- a/projects.html
+++ b/projects.html
@@ -209,11 +209,6 @@
               <li>
                 <a href="index.html#" data-filter=".interior">interior</a>
               </li>
-              <li><a href="index.html#" data-filter=".bedroom">bedroom</a></li>
-              <li>
-                <a href="index.html#" data-filter=".furniture">furniture</a>
-              </li>
-              <li><a href="index.html#" data-filter=".kitchen">kitchen</a></li>
             </ul>
           </div>
           <!-- Our Project Nav End -->
@@ -222,7 +217,7 @@
         <div class="col-lg-12">
           <!-- Project Item Boxes start -->
           <div class="row project-item-boxes align-items-center">
-            <div class="col-md-6 project-item-box architecture interior bedroom">
+            <div class="col-md-6 project-item-box architecture interior">
               <!-- Project Item Start -->
               <div class="project-item wow fadeInUp">
                 <div class="project-image">
@@ -335,7 +330,7 @@
               </div>
               <!-- Project Item End -->
             </div>
-            <div class="col-md-6 project-item-box kitchen furniture interior">
+            <div class="col-md-6 project-item-box kitchen interior">
               <!-- Project Item Start -->
               <div class="project-item wow fadeInUp" data-wow-delay="0.2s">
                 <div class="project-image">
@@ -393,7 +388,7 @@
               <!-- Project Item End -->
             </div>
 
-            <div class="col-md-6 project-item-box interior bedroom">
+            <div class="col-md-6 project-item-box interior">
               <!-- Project Item Start -->
               <div class="project-item wow fadeInUp" data-wow-delay="0.6s">
                 <div class="project-image">
