project section changes

--- a/index.html
+++ b/index.html
@@ -909,6 +909,90 @@
               </div>
               <!-- Project Item End -->
             </div>
+            <div class="col-md-6 project-item-box interior">
+              <!-- Project Item Start -->
+              <div class="project-item wow fadeInUp" data-wow-delay="0.6s">
+                <div class="project-image">
+                  <div class="project-featured-image">
+                    <figure class="image-anime">
+                      <img src="/images/interior/IMG_1402-min.JPG" alt="" />
+                    </figure>
+                  </div>
+
+                  <div class="project-btn">
+                    <a href="projects.html"
+                      ><img src="images/arrow-white.svg" alt=""
+                    /></a>
+                  </div>
+                </div>
+
+                <div class="project-content">
+                  <h3>Interior</h3>
+                  <h2>
+                    <a href="projects.html"
+                      > Curated Interiors for Mr. Jithin's Home</a
+                    >
+                  </h2>
+                </div>
+              </div>
+              <!-- Project Item End -->
+            </div>
+            <div class="col-md-6 project-item-box interior">
+              <!-- Project Item Start -->
+              <div class="project-item wow fadeInUp" data-wow-delay="0.6s">
+                <div class="project-image">
+                  <div class="project-featured-image">
+                    <figure class="image-anime">
+                      <img src="/images/interior/IMG_4150-min.JPG" alt="" />
+                    </figure>
+                  </div>
+
+                  <div class="project-btn">
+                    <a href="projects.html"
+                      ><img src="images/arrow-white.svg" alt=""
+                    /></a>
+                  </div>
+                </div>
+
+                <div class="project-content">
+                  <h3>Interior</h3>
+                  <h2>
+                    <a href="projects.html"
+                      > Curated Interiors for Mr Vijayakumar's Home</a
+                    >
+                  </h2>
+                </div>
+              </div>
+              <!-- Project Item End -->
+            </div>
+            <div class="col-md-6 project-item-box interior">
+              <!-- Project Item Start -->
+              <div class="project-item wow fadeInUp" data-wow-delay="0.6s">
+                <div class="project-image">
+                  <div class="project-featured-image">
+                    <figure class="image-anime">
+                      <img src="/images/interior/interiorrr.jpg" alt="" />
+                    </figure>
+                  </div>
+
+                  <div class="project-btn">
+                    <a href="projects.html"
+                      ><img src="images/arrow-white.svg" alt=""
+                    /></a>
+                  </div>
+                </div>
+
+                <div class="project-content">
+                  <h3>Interior</h3>
+                  <h2>
+                    <a href="projects.html"
+                      >Interiors for Mr Binu's Home</a
+                    >
+                  </h2>
+                </div>
+              </div>
+              <!-- Project Item End -->
+            </div>
           </div>
           <!-- Project Item Boxes End -->
         </div>
