--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
                 <div class="project-image">
                   <div class="project-featured-image">
                     <figure class="image-anime">
-                      <img src="/images/interior/IMG_4150-min.JPG" alt="" />
+                      <img src="/images/interior/IMG_4150-min.jpg" alt="" />
                     </figure>
                   </div>
 
