--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <!-- Slider Image Start -->
             <div class="hero-slider-image">
               <img
-                src="/images/interior/IMG_1295.JPG"
+                src="/images/interior/bnu.jpg"
                 alt="Modern Interior Designers in Kerala"
               />
             </div>
@@ -314,7 +314,7 @@
             <!-- Slider Image Start -->
             <div class="hero-slider-image">
               <img
-                src="/images/interior/bnu.jpg"
+                src="/images/interior/IMG_1295.JPG"
                 alt="Best Interior Decorators in Kerala"
               />
             </div>
@@ -328,7 +328,7 @@
             <!-- Slider Image Start -->
             <div class="hero-slider-image">
               <img
-                src="/images/interior/IMG_1351.JPG"
+                src="/images/interior/IMG_4150-min.jpg"
                 alt="Best Interior Decorators in Kerala"
               />
             </div>
