--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
                   </div>
 
                   <div class="project-btn">
-                    <a href="projects.html"
+                    <a href="project1.html"
                       ><img src="images/arrow-white.svg" alt=""
                     /></a>
                   </div>
@@ -759,7 +759,7 @@
                 <div class="project-content">
                   <h3>Architecture</h3>
                   <h2>
-                    <a href="projects.html"
+                    <a href="project1.html"
                       >Residence for Mr Jithin</a
                     >
                   </h2>
@@ -778,7 +778,7 @@
                   </div>
 
                   <div class="project-btn">
-                    <a href="projects.html"
+                    <a href="project2.html"
                       ><img src="images/arrow-white.svg" alt=""
                     /></a>
                   </div>
@@ -787,7 +787,7 @@
                 <div class="project-content">
                   <h3>Architecture</h3>
                   <h2>
-                    <a href="projects.html"
+                    <a href="project2.html"
                       >Residence for Mr Binu</a
                     >
                   </h2>
@@ -806,7 +806,7 @@
                   </div>
 
                   <div class="project-btn">
-                    <a href="projects.html"
+                    <a href="project3.html"
                       ><img src="images/arrow-white.svg" alt=""
                     /></a>
                   </div>
@@ -815,7 +815,7 @@
                 <div class="project-content">
                   <h3>Architecture</h3>
                   <h2>
-                    <a href="projects.html"
+                    <a href="project3.html"
                       >Residence for Mr Vijayakumar</a
                     >
                   </h2>
@@ -920,7 +920,7 @@
                   </div>
 
                   <div class="project-btn">
-                    <a href="projects.html"
+                    <a href="project1.html"
                       ><img src="images/arrow-white.svg" alt=""
                     /></a>
                   </div>
@@ -929,7 +929,7 @@
                 <div class="project-content">
                   <h3>Interior</h3>
                   <h2>
-                    <a href="projects.html"
+                    <a href="project1.html"
                       > Curated Interiors for Mr. Jithin's Home</a
                     >
                   </h2>
@@ -948,7 +948,7 @@
                   </div>
 
                   <div class="project-btn">
-                    <a href="projects.html"
+                    <a href="project3.html"
                       ><img src="images/arrow-white.svg" alt=""
                     /></a>
                   </div>
@@ -957,7 +957,7 @@
                 <div class="project-content">
                   <h3>Interior</h3>
                   <h2>
-                    <a href="projects.html"
+                    <a href="project3.html"
                       > Curated Interiors for Mr Vijayakumar's Home</a
                     >
                   </h2>
@@ -976,7 +976,7 @@
                   </div>
 
                   <div class="project-btn">
-                    <a href="projects.html"
+                    <a href="project2.html"
                       ><img src="images/arrow-white.svg" alt=""
                     /></a>
                   </div>
@@ -985,7 +985,7 @@
                 <div class="project-content">
                   <h3>Interior</h3>
                   <h2>
-                    <a href="projects.html"
+                    <a href="project2.html"
                       >Interiors for Mr Binu's Home</a
                     >
                   </h2>
