--- a/projects.html
+++ b/projects.html
@@ -214,7 +214,7 @@
           <!-- Our Project Nav End -->
         </div>
 
-        <div class="col-lg-12">
+         <div class="col-lg-12">
           <!-- Project Item Boxes start -->
           <div class="row project-item-boxes align-items-center">
             <div class="col-md-6 project-item-box architecture interior">
@@ -257,7 +257,7 @@
                   </div>
 
                   <div class="project-btn">
-                    <a href="projects.html"
+                    <a href="project1.html"
                       ><img src="images/arrow-white.svg" alt=""
                     /></a>
                   </div>
@@ -266,7 +266,7 @@
                 <div class="project-content">
                   <h3>Architecture</h3>
                   <h2>
-                    <a href="projects.html"
+                    <a href="project1.html"
                       >Residence for Mr Jithin</a
                     >
                   </h2>
@@ -285,7 +285,7 @@
                   </div>
 
                   <div class="project-btn">
-                    <a href="projects.html"
+                    <a href="project2.html"
                       ><img src="images/arrow-white.svg" alt=""
                     /></a>
                   </div>
@@ -294,7 +294,7 @@
                 <div class="project-content">
                   <h3>Architecture</h3>
                   <h2>
-                    <a href="projects.html"
+                    <a href="project2.html"
                       >Residence for Mr Binu</a
                     >
                   </h2>
@@ -313,7 +313,7 @@
                   </div>
 
                   <div class="project-btn">
-                    <a href="projects.html"
+                    <a href="project3.html"
                       ><img src="images/arrow-white.svg" alt=""
                     /></a>
                   </div>
@@ -322,7 +322,7 @@
                 <div class="project-content">
                   <h3>Architecture</h3>
                   <h2>
-                    <a href="projects.html"
+                    <a href="project3.html"
                       >Residence for Mr Vijayakumar</a
                     >
                   </h2>
@@ -427,7 +427,7 @@
                   </div>
 
                   <div class="project-btn">
-                    <a href="projects.html"
+                    <a href="project1.html"
                       ><img src="images/arrow-white.svg" alt=""
                     /></a>
                   </div>
@@ -436,7 +436,7 @@
                 <div class="project-content">
                   <h3>Interior</h3>
                   <h2>
-                    <a href="projects.html"
+                    <a href="project1.html"
                       > Curated Interiors for Mr. Jithin's Home</a
                     >
                   </h2>
@@ -455,7 +455,7 @@
                   </div>
 
                   <div class="project-btn">
-                    <a href="projects.html"
+                    <a href="project3.html"
                       ><img src="images/arrow-white.svg" alt=""
                     /></a>
                   </div>
@@ -464,7 +464,7 @@
                 <div class="project-content">
                   <h3>Interior</h3>
                   <h2>
-                    <a href="projects.html"
+                    <a href="project3.html"
                       > Curated Interiors for Mr Vijayakumar's Home</a
                     >
                   </h2>
@@ -483,7 +483,7 @@
                   </div>
 
                   <div class="project-btn">
-                    <a href="projects.html"
+                    <a href="project2.html"
                       ><img src="images/arrow-white.svg" alt=""
                     /></a>
                   </div>
@@ -492,7 +492,7 @@
                 <div class="project-content">
                   <h3>Interior</h3>
                   <h2>
-                    <a href="projects.html"
+                    <a href="project2.html"
                       >Interiors for Mr Binu's Home</a
                     >
                   </h2>
